Add target variable analysis to the project, ready to create consistency and actual plot

--- a/analysis_pipeline/data_etl.ipynb
+++ b/analysis_pipeline/data_etl.ipynb
@@ -18,7 +18,7 @@
    "id": "3df5fb88",
    "metadata": {},
    "source": [
-    "## Initialization"
+    "## Initialize"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as py\n",
+    "import numpy as np\n",
     "# import polars as pl\n",
     "import gdown\n",
     "import os\n",
@@ -450,7 +450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3cc268dc88640ef8458d64cbf49b958",
+       "model_id": "22a528eef3d2494590b8271b3e75da2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,14 +465,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 24.09it/s]\n",
+      "100%|██████████| 15/15 [00:00<00:00, 24.32it/s]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c674206018b484781065234353f0890",
+       "model_id": "e0f1f5c04ba34422b8252d20865db326",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +486,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b2315830b494c47931a12592c122f64",
+       "model_id": "1b9b41e2251a4991924ba293d97fbb89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ced1ad61763b47b39582ee385c9062f0",
+       "model_id": "688ece494734474c93c4dfb30fbc61a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,6 +762,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "90e1569d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "veh_value cap at 99th percentile: 6.314\n",
+      "traffic_index cap at 99th percentile: 160.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cap 'veh_value' and 'traffic_index' at the 99th percentile for outlier control\n",
+    "veh_value_cap = round(np.nanpercentile(model_data['veh_value'], 99), 3)\n",
+    "traffic_index_cap = round(np.nanpercentile(model_data['traffic_index'], 99), 3)\n",
+    "print(f\"veh_value cap at 99th percentile: {veh_value_cap}\")\n",
+    "print(f\"traffic_index cap at 99th percentile: {traffic_index_cap}\")\n",
+    "model_data['veh_value'] = model_data['veh_value'].clip(upper=veh_value_cap)\n",
+    "model_data['traffic_index'] = model_data['traffic_index'].clip(upper=traffic_index_cap)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "10b843fb",
    "metadata": {},
@@ -771,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "81014fba",
    "metadata": {},
    "outputs": [],
@@ -784,14 +809,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "07d05b91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e95f234c5ee46449711aeb3153acd56",
+       "model_id": "95a1ffc3349b4148a937f44eda7752e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -806,14 +831,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 158.72it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 158.72it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 178.55it/s]\n",
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7baaf89e76574f0d8c8f4f9641e938b0",
+       "model_id": "070adab7dc6b41488220b9df6e9c8adc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,7 +852,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0798a05dd52e4bd189f1e7fc4b3ec79e",
+       "model_id": "9bdd8285c90441c980faed78d5cab686",
        "version_major": 2,
        "version_minor": 0
       },
@@ -841,7 +866,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e384637350534db78cf2a99c7961d681",
+       "model_id": "ef4c998e012742fbb6f42b00d2f6b786",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,6 +876,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "veh_value capped at 6.314\n",
+      "traffic_index capped at 160.0\n"
+     ]
     }
    ],
    "source": [
@@ -858,7 +891,7 @@
     "os.makedirs(output_folder, exist_ok=True)\n",
     "etl = DataETL(inference_data)\n",
     "etl.profile_analysis(output_folder, file_name=\"inference_data_profile.html\", title=\"Inference Data Profiling Report\")\n",
-    "processed_inference_data = etl.transform()"
+    "processed_inference_data = etl.transform(cap_dict={'veh_value': veh_value_cap, 'traffic_index': traffic_index_cap})"
    ]
   },
   {
@@ -871,13 +904,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "8e84812b",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_folder = \"../.local/analysis_pipeline/data_etl\"\n",
-    "model_data.to_parquet(f\"{output_folder}/processed_model_data.parquet\", index=False)\n",
+    "model_data.to_parquet(f\"{output_folder}/model_data.parquet\", index=False)\n",
     "processed_inference_data.to_parquet(f\"{output_folder}/inference_data.parquet\", index=False)"
    ]
   },
