Add additional preparation to perform consistency check

--- a/analysis_pipeline/data_etl.ipynb
+++ b/analysis_pipeline/data_etl.ipynb
@@ -450,7 +450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22a528eef3d2494590b8271b3e75da2e",
+       "model_id": "9cd9df67dad34444ac3e376e0943725f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,14 +465,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 24.32it/s]\n",
-      "\n"
+      "100%|██████████| 15/15 [00:00<00:00, 25.07it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0f1f5c04ba34422b8252d20865db326",
+       "model_id": "12215020ff034752808ee80220fff8e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b9b41e2251a4991924ba293d97fbb89",
+       "model_id": "047fde9940fc4f17959dd6d2235f4b55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "688ece494734474c93c4dfb30fbc61a2",
+       "model_id": "0e3f93fe64934ae491fc2081090dbfc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "90e1569d",
    "metadata": {},
    "outputs": [
@@ -771,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "veh_value cap at 99th percentile: 6.314\n",
+      "veh_value cap at 99th percentile: 6.315\n",
       "traffic_index cap at 99th percentile: 160.0\n"
      ]
     }
@@ -787,11 +786,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "72e13d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assume single vehicle policy and create a vehicle count variable\n",
+    "model_data['veh_cnt'] = 1\n",
+    "\n",
+    "# Add policy year \n",
+    "model_data['pol_year'] = 2017"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "10b843fb",
+   "id": "0b2235a1",
    "metadata": {},
    "source": [
-    "## Carry Out the Same Analysis to Inference Data"
+    "### Carry the above steps to inference data "
    ]
   },
   {
@@ -816,7 +829,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95a1ffc3349b4148a937f44eda7752e0",
+       "model_id": "63541d8326a8484d80a9294f62dd7a0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -831,14 +844,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 178.55it/s]\n",
-      "\n"
+      "100%|██████████| 10/10 [00:00<00:00, 149.25it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "070adab7dc6b41488220b9df6e9c8adc",
+       "model_id": "1c65ec49720f431da13baddf0dbeb0a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -852,7 +864,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bdd8285c90441c980faed78d5cab686",
+       "model_id": "b3ded98e440b435aa2e6797baecf26c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -866,7 +878,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef4c998e012742fbb6f42b00d2f6b786",
+       "model_id": "f5d2b1304f814a96be624833b29f9a93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -881,7 +893,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "veh_value capped at 6.314\n",
+      "veh_value capped at 6.315\n",
       "traffic_index capped at 160.0\n"
      ]
     }
