Add consistency check to the project

--- a/analysis_pipeline/data_etl.ipynb
+++ b/analysis_pipeline/data_etl.ipynb
@@ -809,20 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "81014fba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import sys\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from analysis_tool_chest.data_etl import DataETL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "07d05b91",
    "metadata": {},
    "outputs": [
@@ -899,6 +886,10 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from analysis_tool_chest.data_etl import DataETL\n",
+    "\n",
     "output_folder = \"../.local/analysis_pipeline/data_etl\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "etl = DataETL(inference_data)\n",
