--- a/analysis_pipeline/data_exploration.ipynb
+++ b/analysis_pipeline/data_exploration.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "69ab3688",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "4        3    HBACK      0.803  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,61 +868,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85bc50fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input\n",
-    "pred_var = 'agecat2'\n",
-    "exp_var = 'traffic_index'\n",
-    "year_var = 'pol_year'\n",
-    "\n",
-    "# construct\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8555906",
-   "metadata": {},
-   "source": [
-    "## Predictiveness Check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2ee33ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36865487",
-   "metadata": {},
-   "source": [
-    "## Variable Reduction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f08f066",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01ccc70c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "24440e4e",
    "metadata": {},
@@ -931,25 +876,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb63678a",
+   "id": "2b8970dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import sys\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from analysis_tool_chest.data_exploration import ConsistencyCheckList\n",
+    "\n",
+    "ccl = ConsistencyCheckList(\n",
+    "    data=combined_expo_pred_data, \n",
+    "    pred_var_lst=pred_lst, \n",
+    "    expo_var='veh_cnt', \n",
+    "    year_var='pol_year')\n",
+    "ccl.run_all()\n",
+    "ccl.plot_all()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f177c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed29d42",
+   "id": "e39070e5",
    "metadata": {},
    "outputs": [],
    "source": []
