Add XGBoost model building to the project

--- a/analysis_pipeline/data_etl.ipynb
+++ b/analysis_pipeline/data_etl.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "# Data ETL\n",
-    "> ETL - Extract, Transform, Load: Gather raw data from various sources, clean and consolidate it, and then load it into a single centralized destination\n",
-    "> - Extract data from various sources (databases, files, APIs, etc.)\n",
-    "> - Transform the data by cleaning, formatting, or combining it as needed\n",
-    "> - Load the processed data into a destination, such as a database, data warehouse, or analytics tool\n",
-    "> ETL is a foundational step in data engineering and analytics pipelines, ensuring data is ready for analysis or further processing."
+    "ETL - Extract, Transform, Load: Gather raw data from various sources, clean and consolidate it, and then load it into a single centralized destination\n",
+    "- Extract data from various sources (databases, files, APIs, etc.)\n",
+    "- Transform the data by cleaning, formatting, or combining it as needed\n",
+    "- Load the processed data into a destination, such as a database, data warehouse, or analytics tool\n",
+    "ETL is a foundational step in data engineering and analytics pipelines, ensuring data is ready for analysis or further processing."
    ]
   },
   {
