--- a/analysis_pipeline/data_exploration.ipynb
+++ b/analysis_pipeline/data_exploration.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Data Exploration\n",
-    "> Data exploration is the process of examining and visualizing your data before modeling. It helps you understand the structure, patterns, distributions, and potential issues (like missing values or outliers) in your dataset. This step guides data cleaning, feature engineering, and model selection by revealing important insights about the data."
+    "Data exploration is the process of examining and visualizing your data before modeling. It helps you understand the structure, patterns, distributions, and potential issues (like missing values or outliers) in your dataset. This step guides data cleaning, feature engineering, and model selection by revealing important insights about the data."
    ]
   },
   {
