Update PreditivenessCheck() with top_lift() function

--- a/analysis_pipeline/model_selection.ipynb
+++ b/analysis_pipeline/model_selection.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "97c861fd",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "f7be15d5",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c2ea8399",
    "metadata": {},
    "outputs": [
@@ -403,13 +403,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mengjin6\\AppData\\Local\\Temp\\ipykernel_5932\\344244991.py:19: SettingWithCopyWarning: \n",
+      "C:\\Users\\mengjin6\\AppData\\Local\\Temp\\ipykernel_4300\\344244991.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  train_data['xgb_tweedie_pred'] = train_pred\n",
-      "C:\\Users\\mengjin6\\AppData\\Local\\Temp\\ipykernel_5932\\344244991.py:23: SettingWithCopyWarning: \n",
+      "C:\\Users\\mengjin6\\AppData\\Local\\Temp\\ipykernel_4300\\344244991.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b583e0aa",
    "metadata": {},
    "outputs": [
@@ -473,6 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Top Lift: 7.6513\n",
       "R^2: 0.4557\n",
       "RMSE: 2450.30\n",
       "MAE: 679.45\n"
@@ -505,14 +506,6 @@
     "var_2 = 'xgb_tweedie_pred'\n",
     "nbins = 10\n",
     "\n",
-    "# Compute R^2, RMSE, and MAE\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error, root_mean_squared_error\n",
-    "r2_train = r2_score(data[var_1], data[var_2])\n",
-    "rmse_train = root_mean_squared_error(data[var_1], data[var_2])\n",
-    "mae_train = mean_absolute_error(data[var_1], data[var_2])\n",
-    "print(f\"R^2: {r2_train:.4f}\")\n",
-    "print(f\"RMSE: {rmse_train:.2f}\")\n",
-    "print(f\"MAE: {mae_train:.2f}\")\n",
     "\n",
     "# Create and run PredictivenessCheck\n",
     "pc = PredictivenessCheck(\n",
@@ -525,42 +518,76 @@
     "\n",
     "pc.binning(nbins=nbins)\n",
     "pc.aggregate()\n",
-    "pc.plot(figsize=(10, 4))"
+    "\n",
+    "pc.top_lift()\n",
+    "print(f\"Top Lift: {pc.top_lift:.4f}\")\n",
+    "# Compute R^2, RMSE, and MAE\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, root_mean_squared_error\n",
+    "r2_train = r2_score(data[var_1], data[var_2])\n",
+    "rmse_train = root_mean_squared_error(data[var_1], data[var_2])\n",
+    "mae_train = mean_absolute_error(data[var_1], data[var_2])\n",
+    "print(f\"R^2: {r2_train:.4f}\")\n",
+    "print(f\"RMSE: {rmse_train:.2f}\")\n",
+    "print(f\"MAE: {mae_train:.2f}\")\n",
+    "\n",
+    "pc.plot(figsize=(10, 4))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2dcebd1e",
+   "execution_count": 7,
+   "id": "95be0717",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(9.537328520352961)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2: 0.4557\n",
+      "RMSE: 2450.30\n",
+      "MAE: 679.45\n"
+     ]
     }
    ],
    "source": [
-    "list(pc.agg_df[f'{var_1}_over_{exp_var}'])[-1] / pc.overall_mean"
+    "\n",
+    "# Compute R^2, RMSE, and MAE\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, root_mean_squared_error\n",
+    "r2_train = r2_score(data[var_1], data[var_2])\n",
+    "rmse_train = root_mean_squared_error(data[var_1], data[var_2])\n",
+    "mae_train = mean_absolute_error(data[var_1], data[var_2])\n",
+    "print(f\"R^2: {r2_train:.4f}\")\n",
+    "print(f\"RMSE: {rmse_train:.2f}\")\n",
+    "print(f\"MAE: {mae_train:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "08a61659",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtop_lift\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "pc.top_lift()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95be0717",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08a61659",
+   "id": "d0edf9f8",
    "metadata": {},
    "outputs": [],
    "source": []
