Add model deployment to the project

--- a/analysis_pipeline/data_exploration.ipynb
+++ b/analysis_pipeline/data_exploration.ipynb
@@ -774,6 +774,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7fde173",
+   "metadata": {},
+   "source": [
+    "### Load Data Into Memory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "53bb4f53",
