--- a/analysis_pipeline/model_selection.ipynb
+++ b/analysis_pipeline/model_selection.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Model Selection\n",
-    "Model selection Model selection is a critical step in the modeling procedure where you compare, evaluate, and choose the best predictive model from a set of candidates. The goal of model selection is to identify the model that will perform best on future data, not just the training set. The process typically involves:\n",
+    "Model selection is a critical step in the modeling procedure where you compare, evaluate, and choose the best predictive model from a set of candidates. The goal of model selection is to identify the model that will perform best on future data, not just the training set. The process typically involves:\n",
     "- Comparing different algorithms (e.g., linear regression, decision trees, random forests, etc.).\n",
     "- Tuning model hyperparameters to optimize performance.\n",
     "- Using statistical criteria (such as AIC, BIC, or adjusted R²) and/or validation metrics (such as accuracy, RMSE, ROC-AUC) to assess model quality.\n",
@@ -462,6 +462,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "40f94214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Load Base Model Into Memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f5ccfd91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_folder = \"../.local/analysis_pipeline/model_selection\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "model.save_model(f\"{output_folder}/xgb_tweedie_model.json\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f0c8e71c",
    "metadata": {},
@@ -567,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cdb65859",
    "metadata": {},
    "outputs": [
