--- a/analysis_pipeline/model_selection.ipynb
+++ b/analysis_pipeline/model_selection.ipynb
@@ -1044,8 +1044,10 @@
     "<span style=\"color:red\"><b><i>For sample output illustration, please refer to the plots below:</i></b></span>\n",
     "\n",
     "<div style=\"background-color: #f8f8f8; padding: 10px;\">\n",
-    "    <img src=\"../images/4_grid_search_1.png\" alt=\"Hypter-parameter tunning on learn rate related parameters\" style=\"max-width:100%;\">\n",
-    "    <img src=\"../images/4_grid_search_2.png\" alt=\"Hypter-parameter tunning on max depth and minimum rows\" style=\"max-width:100%;\">\n",
+    "    <p style=\"color: black;\">First, tune learning rate related hyper-parameters.</p>\n",
+    "    <img src=\"../images/4_grid_search_1.png\" alt=\"Hypter-parameter tunning on learn rate related parameters\" style=\"max-width:60%;\">\n",
+    "    <p style=\"color: black;\">Next, tune max depth and minimum rows per node.</p>\n",
+    "    <img src=\"../images/4_grid_search_2.png\" alt=\"Hypter-parameter tunning on max depth and minimum rows\" style=\"max-width:60%;\">\n",
     "</div>\n",
     "\n",
     "\n",
