Create datathon instructions

--- a/analysis_pipeline/model_deployment.ipynb
+++ b/analysis_pipeline/model_deployment.ipynb
@@ -899,10 +899,16 @@
    "id": "7f083f16",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\"><b><i>Task 6: Use SHAP values and Waterfall plots to derive top reaons for individual quote. Specific to-dos are </i></b></span>\n",
+    "<span style=\"color:red\"><b><i>Task 6: Use SHAP values and Waterfall plots to derive top reaons for individual quote and/or global predictor contributions. Specific to-dos are </i></b></span>\n",
     "1. <span style=\"color:red\"><b><i>Read and summarize the paper: https://arxiv.org/abs/1705.07874.</i></b></span>\n",
     "2. <span style=\"color:red\"><b><i>Read and try the SHAP value method described in this blog: https://samuel-book.github.io/samuel_shap_paper_1/xgb_10_features/03_xgb_combined_shap_key_features.html. Note that we only need to handle individual case. Global predictor impact session and other sessions are beneficial but not necessary. </i></b></span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f026ceee",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
