--- a/analysis_pipeline/model_selection.ipynb
+++ b/analysis_pipeline/model_selection.ipynb
@@ -1449,7 +1449,9 @@
     "1. <span style=\"color:red\"><b><i>Build a frequency model: Poisson Log-likelihood as the object function; 'claim_cnt' column as the target variable.</i></b></span> \n",
     "2. <span style=\"color:red\"><b><i>Build a severity model: Gamma Log-likelihood as the object function; 'claim_sev_capped' column as the target variable; Remember to only use policy terms with positive losses.</i></b></span>  \n",
     "3. <span style=\"color:red\"><b><i>Derive the total loss predictions of each policy term via combining the predictions from the frequency model and severity model.</i></b></span> \n",
-    "4. <span style=\"color:red\"><b><i>Compare its performance with the other models built and the base model.</i></b></span> "
+    "4. <span style=\"color:red\"><b><i>Compare its performance with the other models built and the base model.</i></b></span> \n",
+    "\n",
+    "<span style=\"color:red\"><b><i>Another possible solution: Build a weighted regression method to predict claim cost per exposure or use offset method to predict claim cost per policy </i></b></span>"
    ]
   },
   {
