--- a/analysis_pipeline/1_data_etl.ipynb
+++ b/analysis_pipeline/1_data_etl.ipynb
@@ -48,49 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d4688ab9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1NuMdJQb3OfAM-Jg007OxPlUrbaTOeF9k\n",
-      "To: c:\\teaching\\fall2025\\data_science_bootcamp_lecture_1\\.local\\synthetic_auto_policies_model_data_lecture_1_illustration.csv\n",
-      "100%|██████████| 1.44M/1.44M [00:00<00:00, 5.70MB/s]\n",
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1c96cnf1hea--SUr_tQxzxvEkUG30aJpC\n",
-      "To: c:\\teaching\\fall2025\\data_science_bootcamp_lecture_1\\.local\\synthetic_auto_policies_inference_data_lecture_1_illustration.csv\n",
-      "100%|██████████| 1.13M/1.13M [00:00<00:00, 6.17MB/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'c:/teaching/fall2025/data_science_bootcamp_lecture_1/.local/synthetic_auto_policies_inference_data_lecture_1_illustration.csv'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# UNCOMMENT CODE IN THIS CHUNK FOR THE FIRST TIME USING THIS REPO - Onetime data downloading from Google Drive\n",
     "# https://drive.google.com/file/d/1NuMdJQb3OfAM-Jg007OxPlUrbaTOeF9k/view?usp=sharing\n",
     "# https://drive.google.com/file/d/1c96cnf1hea--SUr_tQxzxvEkUG30aJpC/view?usp=sharing\n",
     "model_file_id = \"1NuMdJQb3OfAM-Jg007OxPlUrbaTOeF9k\"\n",
-    "data_folder = \"c:/teaching/fall2025/data_science_bootcamp_lecture_1\"\n",
     "gdown.download(\n",
     "    f\"https://drive.google.com/uc?id={model_file_id}\",\n",
-    "    f'{data_folder}/.local/synthetic_auto_policies_model_data_lecture_1_illustration.csv', \n",
+    "    '../.local/synthetic_auto_policies_model_data_lecture_1_illustration.csv', \n",
     "    quiet=False)\n",
     "inference_file_id = \"1c96cnf1hea--SUr_tQxzxvEkUG30aJpC\"\n",
     "gdown.download(\n",
     "    f\"https://drive.google.com/uc?id={inference_file_id}\",\n",
-    "    f'{data_folder}/.local/synthetic_auto_policies_inference_data_lecture_1_illustration.csv', \n",
+    "    '../.local/synthetic_auto_policies_inference_data_lecture_1_illustration.csv', \n",
     "    quiet=False)"
    ]
   },
@@ -104,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1c996c56",
    "metadata": {},
    "outputs": [
@@ -316,15 +290,14 @@
     }
    ],
    "source": [
-    "data_folder = \"c:/teaching/fall2025/data_science_bootcamp_lecture_1\"\n",
-    "model_data = pd.read_csv(f'{data_folder}/.local/synthetic_auto_policies_model_data_lecture_1_illustration.csv')\n",
+    "model_data = pd.read_csv('../.local/synthetic_auto_policies_model_data_lecture_1_illustration.csv')\n",
     "print( model_data.shape )\n",
     "model_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "050e0a98",
    "metadata": {},
    "outputs": [
@@ -332,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11250, 19)\n"
+      "(15000, 19)\n"
      ]
     },
     {
@@ -380,112 +353,112 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12908</td>\n",
-       "      <td>6.69</td>\n",
-       "      <td>0.213967</td>\n",
-       "      <td>SEDAN</td>\n",
+       "      <td>8295</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>0.777085</td>\n",
+       "      <td>SUV</td>\n",
        "      <td>3</td>\n",
        "      <td>M</td>\n",
-       "      <td>C</td>\n",
+       "      <td>A</td>\n",
        "      <td>2</td>\n",
-       "      <td>petrol</td>\n",
-       "      <td>92</td>\n",
-       "      <td>89</td>\n",
-       "      <td>brown</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>128</td>\n",
+       "      <td>81</td>\n",
+       "      <td>silver</td>\n",
        "      <td>M</td>\n",
        "      <td>1</td>\n",
-       "      <td>weekday</td>\n",
+       "      <td>weekend</td>\n",
        "      <td>6am - 12pm</td>\n",
        "      <td>12</td>\n",
-       "      <td>639.723196</td>\n",
+       "      <td>644.721808</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5721</td>\n",
-       "      <td>6.78</td>\n",
-       "      <td>0.334723</td>\n",
-       "      <td>SEDAN</td>\n",
-       "      <td>4</td>\n",
+       "      <td>17625</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.528369</td>\n",
+       "      <td>STNWG</td>\n",
+       "      <td>1</td>\n",
        "      <td>F</td>\n",
-       "      <td>C</td>\n",
-       "      <td>6</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
        "      <td>dissel</td>\n",
-       "      <td>118</td>\n",
-       "      <td>67</td>\n",
-       "      <td>silver</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
+       "      <td>178</td>\n",
+       "      <td>94</td>\n",
+       "      <td>white</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
        "      <td>weekday</td>\n",
        "      <td>12pm - 6pm</td>\n",
-       "      <td>6</td>\n",
-       "      <td>646.505405</td>\n",
+       "      <td>12</td>\n",
+       "      <td>634.306196</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>16517</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>0.499115</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>2</td>\n",
-       "      <td>M</td>\n",
-       "      <td>C</td>\n",
-       "      <td>2</td>\n",
-       "      <td>electric</td>\n",
-       "      <td>173</td>\n",
-       "      <td>111</td>\n",
-       "      <td>black</td>\n",
+       "      <td>3802</td>\n",
+       "      <td>6.18</td>\n",
+       "      <td>0.384591</td>\n",
+       "      <td>HDTOP</td>\n",
+       "      <td>4</td>\n",
+       "      <td>F</td>\n",
+       "      <td>D</td>\n",
+       "      <td>3</td>\n",
+       "      <td>petrol</td>\n",
+       "      <td>270</td>\n",
+       "      <td>77</td>\n",
+       "      <td>yellow</td>\n",
        "      <td>S</td>\n",
        "      <td>1</td>\n",
        "      <td>weekday</td>\n",
-       "      <td>12pm - 6pm</td>\n",
+       "      <td>6pm - 12am</td>\n",
        "      <td>12</td>\n",
-       "      <td>644.437813</td>\n",
+       "      <td>649.245139</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>16616</td>\n",
-       "      <td>5.86</td>\n",
-       "      <td>0.900445</td>\n",
+       "      <td>12865</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>0.116378</td>\n",
        "      <td>SUV</td>\n",
        "      <td>3</td>\n",
-       "      <td>F</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
-       "      <td>hybrid</td>\n",
-       "      <td>123</td>\n",
-       "      <td>64</td>\n",
-       "      <td>black</td>\n",
        "      <td>M</td>\n",
-       "      <td>0</td>\n",
-       "      <td>weekday</td>\n",
-       "      <td>6am - 12pm</td>\n",
-       "      <td>12</td>\n",
-       "      <td>660.510912</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12795</td>\n",
-       "      <td>6.27</td>\n",
-       "      <td>0.180670</td>\n",
-       "      <td>SEDAN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>F</td>\n",
-       "      <td>B</td>\n",
-       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
        "      <td>petrol</td>\n",
-       "      <td>109</td>\n",
-       "      <td>87</td>\n",
+       "      <td>120</td>\n",
+       "      <td>59</td>\n",
        "      <td>gray</td>\n",
        "      <td>M</td>\n",
        "      <td>1</td>\n",
        "      <td>weekday</td>\n",
        "      <td>6am - 12pm</td>\n",
        "      <td>12</td>\n",
-       "      <td>640.654602</td>\n",
+       "      <td>647.594655</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6495</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>0.688417</td>\n",
+       "      <td>SEDAN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4</td>\n",
+       "      <td>petrol</td>\n",
+       "      <td>94</td>\n",
+       "      <td>81</td>\n",
+       "      <td>green</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>6am - 12pm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>657.550500</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -494,31 +467,31 @@
       ],
       "text/plain": [
        "      id  veh_value  exposure veh_body  veh_age gender area  agecat  \\\n",
-       "0  12908       6.69  0.213967    SEDAN        3      M    C       2   \n",
-       "1   5721       6.78  0.334723    SEDAN        4      F    C       6   \n",
-       "2  16517       5.67  0.499115      SUV        2      M    C       2   \n",
-       "3  16616       5.86  0.900445      SUV        3      F    A       5   \n",
-       "4  12795       6.27  0.180670    SEDAN        2      F    B       1   \n",
+       "0   8295       6.36  0.777085      SUV        3      M    A       2   \n",
+       "1  17625       2.56  0.528369    STNWG        1      F    A       1   \n",
+       "2   3802       6.18  0.384591    HDTOP        4      F    D       3   \n",
+       "3  12865       6.49  0.116378      SUV        3      M    D       4   \n",
+       "4   6495       6.46  0.688417    SEDAN        2      F    C       4   \n",
        "\n",
        "  engine_type  max_power  driving_history_score veh_color marital_status  \\\n",
-       "0      petrol         92                     89     brown              M   \n",
-       "1      dissel        118                     67    silver              S   \n",
-       "2    electric        173                    111     black              S   \n",
-       "3      hybrid        123                     64     black              M   \n",
-       "4      petrol        109                     87      gray              M   \n",
+       "0      hybrid        128                     81    silver              M   \n",
+       "1      dissel        178                     94     white              M   \n",
+       "2      petrol        270                     77    yellow              S   \n",
+       "3      petrol        120                     59      gray              M   \n",
+       "4      petrol         94                     81     green              M   \n",
        "\n",
        "   e_bill time_of_week_driven time_driven  trm_len  credit_score  \\\n",
-       "0       1             weekday  6am - 12pm       12    639.723196   \n",
-       "1       0             weekday  12pm - 6pm        6    646.505405   \n",
-       "2       1             weekday  12pm - 6pm       12    644.437813   \n",
-       "3       0             weekday  6am - 12pm       12    660.510912   \n",
-       "4       1             weekday  6am - 12pm       12    640.654602   \n",
+       "0       1             weekend  6am - 12pm       12    644.721808   \n",
+       "1       1             weekday  12pm - 6pm       12    634.306196   \n",
+       "2       1             weekday  6pm - 12am       12    649.245139   \n",
+       "3       1             weekday  6am - 12pm       12    647.594655   \n",
+       "4       1             weekday  6am - 12pm       12    657.550500   \n",
        "\n",
        "   low_education_ind  \n",
        "0                  0  \n",
        "1                  0  \n",
        "2                  0  \n",
-       "3                  1  \n",
+       "3                  0  \n",
        "4                  0  "
       ]
      },
@@ -528,7 +501,7 @@
     }
    ],
    "source": [
-    "inference_data = pd.read_csv(f'{data_folder}/.local/synthetic_auto_policies_inference_data_lecture_1_illustration.csv')\n",
+    "inference_data = pd.read_csv(f'../.local/synthetic_auto_policies_inference_data_lecture_1_illustration.csv')\n",
     "print( inference_data.shape )\n",
     "inference_data.head(5)"
    ]
@@ -594,7 +567,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a97f799fdee24e9197fa181ffaeb81eb",
+       "model_id": "022e47bfcde34a439b8c728a509d4ff8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,13 +582,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24/24 [00:00<00:00, 71.78it/s]\n"
+      "100%|██████████| 24/24 [00:00<00:00, 50.20it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5369b891294746dba634ddde99b86a79",
+       "model_id": "72f31650a4d445d88d2febb1a14a8972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -629,7 +602,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fb492cf2bdb4f76923ee87dfe8547d1",
+       "model_id": "10b30ce0d68a46a185d3974e63f4c9cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -643,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7834ed5f77f41daba6d8c1b54c80688",
+       "model_id": "1fce58c81b8741e38762d1c166200d74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -849,7 +822,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deefa895f13d49b980fa048094d3288a",
+       "model_id": "f454891fdb3e4edaa69355effcb23d87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -864,13 +837,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 204.31it/s]\n"
+      "100%|██████████| 19/19 [00:00<00:00, 84.80it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a83a8ea3fe3a4fbea5778273e585f046",
+       "model_id": "09be376f0dd84dd98aeeb6b894263be5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -884,7 +857,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ac41a0057d744c19cefe219084f3b0f",
+       "model_id": "b68ae2475bd64a5888d7456b337a6d4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -898,7 +871,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbbbae7f9a6a454180b34c0f28aae927",
+       "model_id": "cf1a06ede6a24a04b8f6c8e431faf5cb",
        "version_major": 2,
        "version_minor": 0
       },
